--- a/index.html
+++ b/index.html
@@ -12,39 +12,82 @@
     <script src="./js/jquery-3.6.0.min.js"></script>
     <script src="./js/main.js"></script>
 
-    <title>Document</title>
+    <title>Un modo migliore per gestire le tue finanze | Revolut IT</title>
 </head>
 <body>
 
     <!-- HEADER -->
-    <header>
+    <header class="container">
         <!-- NAV LEFT -->
         <ul class="ul-left">
             <li>
-                <a href="" class="logo">Logo</a>
+                <a href="" class="logo">
+                    <img src="./img/logo.svg" alt="Logo Revolute">
+                </a>
             </li>
             <li>
                 <a href="#">Personale</a>
             </li>
             <li>
-                <a href="#">Businnes</a>
+                <a href="#" class="grey">Businnes</a>
             </li>
 
         </ul>
 
         <!-- NAV RIGHT -->
-        <ul class="ul-left">
+        <ul class="ul-right">
             <li class="dropdown">
-                <a href="#" class="menu">Funzionalità</a>
+                <a href="#" class="menu grey">Funzionalità</a>
+                
             </li>
             <li class="dropdown">
-                <a href="#" class="menu">Abbonamenti</a>
+                <a href="#" class="menu grey">Abbonamenti</a>
+                <ul class="dropmenu">
+                    <li>
+                        <a href="#" class="grey">Standard</a>
+                    </li>
+                    <li>
+                        <a href="#" class="grey">Plus</a>
+                    </li>
+                    <li>
+                        <a href="#" class="grey">Premium</a>
+                    </li>
+                    <li>
+                        <a href="#" class="grey">Metal</a>
+                    </li>
+                    <li>
+                        <a href="#" class="grey">Confronta i piani</a>
+                    </li>
+                </ul>
             </li>
             <li class="dropdown">
-                <a href="#" class="menu">Chi Siamo</a>
+                <a href="#" class="menu grey">Chi Siamo</a>
+                <ul class="dropmenu">
+                    <li>
+                        <a href="#" class="grey">Chi siamo</a>
+                    </li>
+                    <li>
+                        <a href="#" class="grey">Blog</a>
+                    </li>
+                    <li>
+                        <a href="#" class="grey">Leadership</a>
+                    </li>
+                    <li>
+                        <a href="#" class="grey">Sala stampa</a>
+                    </li>
+                    <li>
+                        <a href="#" class="grey">Affiliate</a>
+                    </li>
+                    <li>
+                        <a href="#" class="grey">Influencer</a>
+                    </li>
+                    <li>
+                        <a href="#" class="grey">Lavora con noi</a>
+                    </li>
+                </ul>
             </li>
             <li class="dropdown">
-                <a href="#" class="menu">Aiuto</a>
+                <a href="#" class="menu grey">Aiuto</a>
             </li>
             <li>
                 <a href="#" class="btn">Accedi</a>
